crates/rspack_loader_swc/src/rsc_transforms/tests/fixture/errors/server-actions/server-graph/2/output.js
'use strict';
export function bar() {}
